--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo-List</title>
+    <title>ToDo-list</title>
+    <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,7 +17,7 @@
   <body>
     <main class="todo-container">
       <div class="todo-header">
-        <div class="task-history">🤍</div>
+        <div class="task-emoji">🤍</div>
         <p>TO-DO APP</p>
       </div>
 
